第一次修改

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="width: 100%">
 <div style="width: 900px;margin: 0 auto">
-	<embed src="前端开发实习-郭星宇.pdf" height=600px width=900px >
+	<embed src="郭星宇-前端开发.pdf" height=600px width=900px >
 </div>
 </body>
 </html>
